# python-mazes

./: maze.py  pyproject.toml  scratch.ipynb
mazes/: __init__.py  generate.py  generators.py  solve.py  visualise.py
