[tool.poetry]
name = "mazes"
version = "0.1.0"
description = "a maze solving and generation library"
authors = ["Alexander Davidson Bryan <alxdb@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9.0"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
notebook = "^6.1.5"
matplotlib = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
