[tool.poetry]
name = "mazes"
version = "0.1.0"
description = "a maze solving and generation library"
authors = ["Alexander Davidson Bryan <alxdb@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pycairo = "^1.20.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
